Update banner.css with new styles

--- a/Landing_iquitos.html
+++ b/Landing_iquitos.html
@@ -13,6 +13,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+
+    <!-- iconos -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -41,7 +44,7 @@
         </div>
         <div class="contenedor_s2">
             <div class="contenedor_logo">
-                <img src="./assets/ICONO-PLANETA-BLANCO.png" alt="">
+                <img  src="./assets/icono-de-joya-natural.png" alt="">
                 <p>Iquitos, la capital de la región Loreto, se alza como una joya natural escondida en el corazón del
                     Amazonas peruano.
                 </p>
@@ -53,7 +56,7 @@
 
             </div>
             <div class="contenedor_logo">
-                <img src="./assets/ICONO-PLANETA-BLANCO.png" alt="">
+                <img  src="./assets/icono-de-inversionistas.png" alt="">
                 <p>Iquitos se presenta como una oportunidad única para los inversionistas visionarios que buscan ser
                     parte del desarrollo de una ciudad con un futuro radiante.</p>
 
@@ -84,22 +87,233 @@
         </div>
 
     </section>
+
     <section class="seccion_05">
         <h2>Invierte en Iquitos y Sé <br> Parte de su Crecimiento</h2>
 
     </section>
+
     <section class="seccion_06">
         <div class="contenedor_06">
-            <h2>¿Te imaginas ser parte de un proyecto en un lugar paradisíaco con un alto potencial de rentabilidad?</h2>
-            <p>Este proyecto inmobiliario te ofrece la oportunidad de invertir en terrenos estratégicamente ubicados en Iquitos, con un alto potencial de revalorización a corto y mediano plazo.</p>
+            <h2>¿Te imaginas ser parte de un proyecto en un lugar paradisíaco con un alto potencial de rentabilidad?
+            </h2>
+            <p>Este proyecto inmobiliario te ofrece la oportunidad de invertir en terrenos estratégicamente ubicados en
+                Iquitos, con un alto potencial de revalorización a corto y mediano plazo.</p>
 
         </div>
-       
+
 
     </section>
-    <section></section>
-    <section></section>
-    <section></section>
+
+
+    <section class="seccion_07">
+        <div class="primero07">
+            <h2>¿Por qué invertir en este proyecto?
+
+            </h2>
+            <div class="linea01">
+
+            </div>
+            <img src="./assets/seccion7.png" alt="">
+
+        </div>
+        <div class="segundo07">
+            <p><span class="titulo07">Alto potencial de rentabilidad:</span> Iquitos es un mercado en auge con una alta
+                demanda de propiedades, tanto para uso residencial como turístico.</p>
+            <p><span class="titulo07">Ubicación estratégica:</span> Los terrenos se encuentran en zonas con gran
+                potencial de desarrollo, cerca de los principales atractivos turísticos y de la infraestructura urbana.
+            </p>
+            <p><span class="titulo07">Seguridad jurídica:</span> Te ofrecemos un marco legal seguro y transparente para
+                tu inversión.</p>
+            <p><span class="titulo07">Diversificación de tu portafolio:</span> Invertir en Iquitos te permite
+                diversificar tu portafolio de inversiones y protegerte de las fluctuaciones del mercado.</p>
+
+
+        </div>
+
+    </section>
+    <div class="linea02"></div>
+
+    <section class="seccion_08">
+
+        <div class="primero08">
+            <p><span class="titulo08">Acceso a terrenos exclusivos: </span>Te ofrecemos una selección de terrenos
+                cuidadosamente seleccionados en las mejores ubicaciones de Iquitos, donde los inversores pueden hacer
+                crecer su dinero con proyectos que son vendidos a otros inversores</p>
+            <p><span class="titulo08">Asesoramiento personalizado:</span> Un equipo de expertos te brindará asesoría
+                personalizada en todo momento, desde la selección del terreno hasta la gestión de la inversión.</p>
+
+
+        </div>
+        <div class="segundo08">
+            <h2>¿Qué te Ofrecemos?
+
+            </h2>
+            <div class="linea03">
+
+            </div>
+            <img src="./assets/seccion8.png" alt="">
+
+        </div>
+
+    </section>
+    <div class="linea04"></div>
+
+<!-- mailchimp -->
+    <section class="seccion_09" id="contacto"> 
+        <div class="s03">
+            <h2>Regístrate Ahora para Asegurar tu Lugar en Nuestro Webinar Exclusivo</h2>
+            <p>Descubre cómo puedes convertirte en parte del desarrollo de Iquitos y obtener una rentabilidad
+                excepcional para tu inversión.</p>
+        </div>
+        <section class="container section_div" id="contacto">
+            <div class="contenedor">
+                <div id="mc_embed_shell">
+                    <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet"
+                        type="text/css">
+
+                    <div id="mc_embed_signup">
+                        <form
+                            action="https://vive-rentable.us8.list-manage.com/subscribe/post?u=8b7f686722931bd734a2e7d9b&amp;id=5ce211eaf0&amp;f_id=001202e0f0"
+                            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                            class="validate" target="_blank">
+                            <div id="mc_embed_signup_scroll" class="animate-bg">
+                                <h4>¡Descubre cómo hacerlo en nuestro webinar exclusivo!.</h4>
+                                <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                                <div class="mc-field-group"><label for="mce-EMAIL">Dirección de correo electrónico <span
+                                            class="asterisk">*</span></label><input type="email" name="EMAIL"
+                                        class="required email" id="mce-EMAIL" required="" value=""></div>
+                                <div class="mc-field-group"><label for="mce-FNAME">Nombre </label><input type="text"
+                                        name="FNAME" class=" text" id="mce-FNAME" value=""></div>
+                                <div class="mc-field-group"><label for="mce-PHONE">Número de teléfono </label><input
+                                        type="text" name="PHONE" class="REQ_CSS" id="mce-PHONE" value=""></div>
+                                <div hidden=""><input type="hidden" name="tags" value="5179777"></div>
+                                <div id="mce-responses" class="clear foot">
+                                    <div class="response" id="mce-error-response" style="display: none;"></div>
+                                    <div class="response" id="mce-success-response" style="display: none;"></div>
+                                </div>
+                                <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                                    <input type="text" name="b_8b7f686722931bd734a2e7d9b_5ce211eaf0" tabindex="-1"
+                                        value="">
+                                </div>
+                                <div class="optionalParent">
+                                    <div class="clear foot">
+                                        <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
+                                            value="Enviar">
+                                        <p style="margin: 0px auto;"><a href="http://eepurl.com/iJLt9s"
+                                                title="Mailchimp - email marketing made easy and fun"><span
+                                                    style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
+                                                        class="refferal_badge"
+                                                        src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
+                                                        alt="Intuit Mailchimp"
+                                                        style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <script type="text/javascript"
+                        src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+                    <script
+                        type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+                </div>
+
+            </div>
+
+
+        </section>
+
+    </section>
+<!-- -------------------- -->
+
+    <section class="seccion_10">
+        <div class="superior10">
+            <h2>En este webinar exclusivo, aprenderás:</h2>
+
+        </div>
+        <div class="inferior10">
+            <div class="texto10"><span class="numero">1</span>
+                <p>El potencial de inversión en Iquitos: Las razones por las que Iquitos es un destino atractivo para
+                    los inversores inmobiliarios.</p>
+
+            </div>
+            <div class="texto10"><span class="numero">2</span>
+                <p>Las ventajas de nuestro proyecto: Las características y beneficios de invertir en nuestros terrenos.
+                </p>
+
+            </div>
+            <div class="texto10"><span class="numero">3</span>
+                <p>Cómo convertirte en socio de nuestro proyecto: Los pasos a seguir para convertirte en parte de esta
+                    oportunidad única. </p>
+
+            </div>
+        </div>
+
+    </section>
+
+    <section class="seccion_11">
+        <h2>No pierdas la oportunidad de ser parte del futuro de Iquitos. </h2>
+
+    </section>
+
+    <section class="seccion_12">
+        <a href="#contacto">¡Regístrate ahora!</a>
+
+    </section>
+
+    <footer class="footer">
+        <div class="section__container footer__container">
+            <div class="footer__col">
+                <h4>Vive Rentable</h4>
+                <p>
+                    La plataforma invita a los
+                    inversores a ser agentes de cambio en
+                    sectores como agroindustria,
+                    inmobiliario y tecnología. Transforma
+                    las inversiones en acciones, brindando
+                    oportunidades para participar en
+                    proyectos monumentales y ser
+                    protagonistas de historias de éxito.
+                </p>
+                <div class="footer__socials">
+                    <span>
+                        <a href="https://www.facebook.com/viverentablepe" target="_blank"><i
+                                class="ri-facebook-circle-fill"></i></a>
+                    </span>
+                    <span>
+                        <a href="https://www.instagram.com/viverentable/" target="_blank"><i
+                                class="ri-instagram-line"></i></a>
+                    </span>
+                    <span>
+                        <a href="https://www.tiktok.com/@vive_rentable_" target="_blank"><i
+                                class="ri-tiktok-fill"></i></a>
+                    </span>
+                    <span>
+                        <a href="https://www.linkedin.com/company/vive-rentable/" target="_blank"><i
+                                class="ri-linkedin-fill"></i></a>
+                    </span>
+                </div>
+            </div>
+
+            <div class="footer__col">
+                <h4>Contacto</h4>
+                <a href="#contact">
+                    <span><i class="ri-mail-line"></i></span> info@vive-rentable.com
+                </a>
+                <a href="https://wa.link/garf4f" target="_blank">
+                    <span><i class="ri-phone-line"></i></span>947548260
+                </a>
+                <a target="_blank" href="https://vive-rentable.com/">
+                    <img class="logo_negativo" src="./assets/logo_negativo.png" alt="logo">
+                </a>
+            </div>
+        </div>
+        <div class="footer__bar">
+            Copyright © 2024 vive-rentable.com All rights reserved.
+        </div>
+    </footer>
+
 
 </body>
 
