--- a/Landing_iquitos.html
+++ b/Landing_iquitos.html
@@ -693,6 +693,7 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                height: 100%;
             }
 
             .superior_01 img {
@@ -942,7 +943,7 @@
             .popup {
                 margin: auto;
                 width: 300px;
-                height: 100%;
+                height: 500px;
             }
 
             .popup-content {
@@ -972,7 +973,7 @@
                 <p><span class="iquitos">Iquitos</span>: La joya natural escondida del perú, una oportunidad
                     inmobiliaria inigualable</p>
 
-                <a href="#info">conoce más</a>
+                <a href="#contacto">conoce más</a>
             </div>
 
         </div>
