Add color to .texto10 p

--- a/Landing_iquitos.html
+++ b/Landing_iquitos.html
@@ -534,6 +534,7 @@
         }
 
         .texto10 p {
+            color: #00AE45;
             font-size: 20px;
             font-weight: 700;
             margin: auto;
