--- a/Landing_iquitos.html
+++ b/Landing_iquitos.html
@@ -534,6 +534,7 @@
         }
 
         .texto10 p {
+            height: 100%;
             color: #00AE45;
             font-size: 20px;
             font-weight: 700;
