--- a/Landing_webinar_mb.html
+++ b/Landing_webinar_mb.html
@@ -333,6 +333,55 @@
 
     }
 
+    /* --------- */
+
+    .qr {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+        padding: 20px;
+
+    }
+
+    .s001 {
+        margin: auto;
+
+    }
+
+    .s001 h3 {
+        color: #005E6C;
+        font-size: 30px;
+        font-weight: 800;
+        text-align: center;
+        margin-bottom: 30px;
+    }
+
+    .s001 a {
+        display: block;
+        margin: auto;
+        text-align: center;
+        padding: 10px 20px;
+        background-color: #005E6C;
+        color: #fff;
+        font-size: 20px;
+        font-weight: 800;
+        border-radius: 10px;
+        transition: 0.3s;
+    }
+
+    .s001 a:hover {
+        background-color: #00AE45;
+    }
+
+    .s002 {
+        margin: auto;
+    }
+
+    .s002 img {
+
+        margin: auto;
+        width: 600px;
+    }
 
     /* -------- */
     .agregado {
@@ -834,6 +883,18 @@
             /* Tamaño de las etiquetas de días, horas, minutos y segundos */
         }
 
+        .qr{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .s002 img {
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+        }
 
 
         /* Seccion 03 */
@@ -1146,6 +1207,19 @@
         </div>
         <h3>PARA NUESTRO WEBINAR EXCLUSIVO</h3>
     </article>
+
+    <section class="qr">
+        <div class="s001">
+            <h3>Únete a nuestro grupo de Whatsapp para mantenerte informado</h3>
+            <a target="_blank" href="https://chat.whatsapp.com/LQmXWnpOib4IdmCPWuQ4zm">Ingresar</a>
+
+        </div>
+        <div class="s002">
+            <img src="./assets/qr.jpeg" alt="">
+        </div>
+
+    </section>
+
 
 
     <section class="seccion_04">
