--- a/Landig_webinar_maduracion.html
+++ b/Landig_webinar_maduracion.html
@@ -335,6 +335,57 @@
 
         }
 
+        /* ------- */
+
+        .qr {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 20px;
+            padding: 20px;
+
+        }
+
+        .s001 {
+            margin: auto;
+
+        }
+
+        .s001 h3 {
+            color: #005E6C;
+            font-size: 25px;
+            font-weight: 800;
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        .s001 a {
+            display: block;
+            margin: auto;
+            text-align: center;
+            padding: 10px 20px;
+            background-color: #005E6C;
+            color: #fff;
+            font-size: 20px;
+            font-weight: 800;
+            border-radius: 10px;
+            transition: 0.3s;
+        }
+
+        .s001 a:hover {
+            background-color: #00AE45;
+        }
+
+        .s002 {
+            margin: auto;
+        }
+
+        .s002 img {
+
+            margin: auto;
+            width: 500px;
+            height: 500px;
+            object-fit: cover;
+        }
 
         /* -------- */
         .agregado {
@@ -698,7 +749,8 @@
                 flex-wrap: wrap;
                 justify-content: center;
             }
-            .p_s1{
+
+            .p_s1 {
                 gap: 70px;
             }
 
@@ -787,6 +839,19 @@
                 min-width: 10px;
 
                 /* Tamaño de las etiquetas de días, horas, minutos y segundos */
+            }
+
+            .qr {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .s002 img {
+                width: 100%;
+                height: 300px;
+                object-fit: cover;
             }
 
 
@@ -961,7 +1026,8 @@
         <div class="p_s1">
             <p>Mientras otros  invierten en sembrar, pocos invierten en satisfacer las necesidades de los que siembran y
                 del producto cosechado: ¡Los servicios de conservación y maduración! </p>
-            <p>Ahí es donde la demanda supera a la oferta y se abren las oportunidades para todo inversor visionario. </p>
+            <p>Ahí es donde la demanda supera a la oferta y se abren las oportunidades para todo inversor visionario. 
+            </p>
 
         </div>
 
@@ -1080,6 +1146,19 @@
         </div>
         <h3>PARA NUESTRO WEBINAR EXCLUSIVO</h3>
     </article>
+
+    <section class="qr">
+        <div class="s001">
+            <h3>Únete a nuestro grupo de Whatsapp para mantenerte informado</h3>
+            <a target="_blank" href="https://chat.whatsapp.com/LQmXWnpOib4IdmCPWuQ4zm">Ingresar</a>
+
+        </div>
+        <div class="s002">
+            <img src="./assets/qr.jpeg" alt="">
+        </div>
+
+    </section>
+
 
 
     <section class="seccion_04">
