--- a/Landing_webinar_mb.html
+++ b/Landing_webinar_mb.html
@@ -350,7 +350,7 @@
 
     .s001 h3 {
         color: #005E6C;
-        font-size: 30px;
+        font-size: 25px;
         font-weight: 800;
         text-align: center;
         margin-bottom: 30px;
@@ -380,7 +380,9 @@
     .s002 img {
 
         margin: auto;
-        width: 600px;
+        width: 500px;
+        height: 500px;
+        object-fit: cover;
     }
 
     /* -------- */
