Update link in gracias.html

--- a/gracias.html
+++ b/gracias.html
@@ -92,7 +92,7 @@
         <h1>¡Gracias por suscribirte!</h1>
         <p>Estamos emocionados de tenerte a bordo. Ahora estarás al tanto de todas nuestras actualizaciones y noticias.
         </p>
-        <a href="./index.html" class="button">Volver al inicio</a>
+        <a href="./Landig_webinar_maduracion.html" class="button">Volver al inicio</a>
     </div>
 </body>
 
