--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                   <div aria-hidden="true" style="position: absolute; left: -5000px;"><input type="text"
                       name="b_8b7f686722931bd734a2e7d9b_5ce211eaf0" tabindex="-1" value=""></div>
                   <div class="clear"><input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
-                      value="Subscribe"></div>
+                      value="Subscríbete"></div>
                 </div>
               </form>
             </div>
@@ -238,7 +238,7 @@
 
     </div>
     <div class="divp">
-      <p><span>¡Suscribete ahora!</span>
+      <p><span>¡Suscríbete ahora!</span>
         y estarás al tanto de las ultimas novedades de tu proxima inversión</p>
     </div>
 
